change the element

--- a/index.html
+++ b/index.html
@@ -80,64 +80,64 @@
   
   <div class="skills-container">
     
-  <div class="skills-item">
+  <div class="skills-item"  data-aos="fade-left" data-aos-duration="1000">
     <img src="skills-logo/icons8-html-5-48.png" data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>HTML</h6>
   </div>
 
-  <div class="skills-item">
+  <div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
     <img src="skills-logo/icons8-css-logo-48.png" data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>CSS</h6>
   </div>
 
-  <div class="skills-item">
+  <div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
     <img src="skills-logo/icons8-javascript-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Javascript</h6>
 </div>
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-react-40.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>React</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-bootstrap-logo-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Bootstrap</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-visual-studio-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>VS code</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-github-logo-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Github</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-git-logo-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Git</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-microsoft-excel-2019-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Excel</h6>
 </div>
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-powerpoint-logo-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Powerpoint</h6>
 </div>
 
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-microsoft-word-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Word</h6>
 </div>
 
 
 
-<div class="skills-item">
+<div class="skills-item" data-aos="fade-left" data-aos-duration="1000">
   <img src="skills-logo/icons8-canva-48.png"data-aos="zoom-out-up" data-aos-duration="1000">
 <h6>Canva</h6>
 </div>
