--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
   
   <div class="about-me-content" data-aos="fade-up" data-aos-duration="2000">
     <p>Hi, I'm Mohamed Yusuf, a web developer with a passion for creating beautiful and functional websites. I specialize in front-end development, using HTML, CSS, and JavaScript to build responsive and user-friendly interfaces.</p>
-  
+    <p> I enjoy with collaborating designers and back-end developers to bring projects to life.</p>
 
   <img src="WhatsApp Image 2025-04-19 at 15.27.55_75d52582 (1).png" alt="My Image" class="about-image" > 
 </div>
 
-
+</div>
 <!--skills container-->
 <div class="skills">
   <h2 class="header">My <span>Skills</span></h2>
