--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
      
   <!--skills container-->
   <div class="skills" id="skills">
-    <h2 class="header">My <span>Skills</span></h2>
+    <h2 class="header" data-aos="fade-up" data-aos-duration="2000">My <span>Skills</span></h2>
 
     <div class="skills-container">
 
@@ -160,7 +160,7 @@
     <!-- project section start-->
 
     <!-- Desktop layout (visible only on md and up) -->
-     <section class="project-container">
+     <section class="project-container" data-aos="fade-up" data-aos-duration="2000">
       <h1>
         <span>p</span>r<span>o</span>j<span>e</span>t<span>s</span>
        </h1>
@@ -237,7 +237,7 @@
 
 
 <!--contact me section start-->
-    <section class="contact-me" id="contact">
+    <section class="contact-me" id="contact" data-aos="fade-up" data-aos-duration="3000">
       <h2 class="contact-header">Contact<span> Me</span></h2>
       <div class="contact-info">
         <p><strong>Name:</strong> Mohamed Yusuf</p>
