--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
       <img src="WhatsApp Image 2025-04-19 at 15.27.55_75d52582 (1).png" alt="My Image" class="image"
         data-aos="zoom-out-up" data-aos-duration="1000">
     </div>
+  </div>
     <!--.....................Image Section End ..................-->
 
 
 
 
     <!--about me container-->
-  </div>
+  
   <div class="about-me" id="about">
     <div class="about-me-header" data-aos="fade-up" data-aos-duration="2000">
       <h2 class="header">About <span>Me</span></h2>
@@ -71,13 +72,16 @@
         specialize in front-end development, using HTML, CSS, and JavaScript to build responsive and user-friendly
         interfaces.</p>
       <p> I enjoy with collaborating designers and back-end developers to bring projects to life.</p>
+      <p>In my free time, I love to explore new technologies and work on personal projects. I'm always eager to learn
+        and improve my skills.</p>
+      <p>Feel free to reach out if you'd like to connect or collaborate!</p>
     </div>
-    <div>
+   
       <img src="WhatsApp Image 2025-04-19 at 15.27.55_75d52582 (1).png" alt="My Image" class="about-image">
     </div>
 
   </div>
-
+  </div>
 
 
 
@@ -237,7 +241,7 @@
 
 
 <!--contact me section start-->
-    <section class="contact-me" id="contact" data-aos="fade-up" data-aos-duration="3000">
+    <section class="contact-me" id="contact" data-aos="fade-up" data-aos-duration="5000">
       <h2 class="contact-header">Contact<span> Me</span></h2>
       <div class="contact-info">
         <p><strong>Name:</strong> Mohamed Yusuf</p>
